// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper/LambdaWrapper LambdaWrapper executes the wrapped function when it is async 1`] = `
{
  "body": "{"data":{"x":"success"},"message":"ok"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`Wrapper/LambdaWrapper LambdaWrapper executes the wrapped function when it is sync 1`] = `
{
  "body": "{"data":{"x":"success"},"message":"ok"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`Wrapper/LambdaWrapper LambdaWrapper should catch exceptions and generate appropriate responses catches async errors rejects the promise with throwError === true 1`] = `"ASYNC_THROWING"`;

exports[`Wrapper/LambdaWrapper LambdaWrapper should catch exceptions and generate appropriate responses catches async errors resolves an error http response with throwError === false 1`] = `
{
  "body": "{"data":"external","message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 403,
}
`;

exports[`Wrapper/LambdaWrapper LambdaWrapper should catch exceptions and generate appropriate responses catches sync errors returns a raw error with throwError === true 1`] = `[Error: SYNC_THROWING]`;

exports[`Wrapper/LambdaWrapper LambdaWrapper should catch exceptions and generate appropriate responses catches sync errors returns an error http response with throwError === false 1`] = `
{
  "body": "{"data":"external","message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 403,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 1`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 2`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 3`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 4`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 5`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 6`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 7`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 8`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 9`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 10`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 11`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 12`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 13`] = `
{
  "body": "{"data":{},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;

exports[`Wrapper/LambdaWrapper handleError Generates a response object 14`] = `
{
  "body": "{"data":{"data":1},"message":"unknown error"}",
  "headers": {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 500,
}
`;
